--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "run-sequence": "^0.3.6",
     "streamqueue": "^0.1.1",
     "wiredep": "^1.8.5"
+  },
+  "dependencies": {
+    "angular-animate": "^1.3.11"
   }
 }
